Fixed many annoying bugs. Grr.

--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,13 @@
 	float: left;
 }
 
-#status-area {
+.status-area {
 	width:580px ;
 	height:480px;
 	background-color: #CCCCCC;
 	float: right;
 	border-radius: 10px;
-	padding-left: 10px
+	padding-left: 10px;
 }
 
 .connection {
@@ -51,18 +51,26 @@
 .you {
 
 	background-color: #77cc77;
-	width:200px ;
-	height: 30px;
+	width: 200px;
+	height: 20px;
 	border-radius: 10px;
+	font-size: 12px;
+	padding-left:7px;
+	padding-right:7px;
+	padding-top:2px;
 
 }
 
 .peer {
 
 	background-color: #7777cc;
-	width: 200px ;
-	height: 30px;
+	width: 200px;
+	height: 20px;
 	border-radius: 10px;
+	font-size: 12px;
+	padding-left:7px;
+	padding-right:7px;
+	padding-top:2px;
 
 }
 
