--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@
 	float: right;
 	border-radius: 10px;
 	padding-left: 10px;
+
+	display:none;
 }
 
 .connection {
@@ -134,6 +136,17 @@
 
 	display: none;
 
+}
+
+#photo-stream {
+	height: 100%;
+	width: 245px;
+
+	position: absolute;
+	top: 0px;
+	right:0px;
+
+	background-color: #888888;
 }
 
 #inner-shutter {
