--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,32 @@
     opacity: 0.1;
 }
 
+.custom-button {
+
+	width: 110px;
+	height: 30px;
+	border-radius: 15px;
+	line-height: 30px;
+
+	position: absolute;
+	left: 50%;
+	margin-left: -55px;
+	margin-top: 10px;
+
+	opacity: 0.5;
+
+}
+
+#connect-button {
+
+	background-color: #2255AA;
+
+}
+
+#call-button {
+
+	background-color: #22AA55;
+	display: none;
+
+}
+
