--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-#background {
-
-
+html, body {
+  height: 100%;
+  overflow: hidden;
 }
 
 #connection-area {
@@ -147,6 +147,18 @@
 	right:0px;
 
 	background-color: #888888;
+
+	overflow-y: scroll;
+}
+
+.photo {
+
+	float: right;
+	margin-right: 10px;
+	margin-top: 10px;
+
+	width:225px;
+	height:168.75px;
 }
 
 #inner-shutter {
