--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,14 @@ html, body {
 	bottom: 0px;
 	right: 0px;
 	/*
-	width:640px ;
+	width:640px ; // Default video size - but we want fullscreen instead.
 	height:480px;
 	*/
 	background-color: #333333;
 	float: left;
 }
 
-#video-container #camera {
+#video-container #camera-view {
 	width: 100%;
 	height: 100%;
 }
@@ -100,7 +100,7 @@ html, body {
 
 }
 
-.camera-ui {
+.camera-connection-ui {
 
 	height: 120px;
 	width: 220px;
@@ -123,7 +123,7 @@ html, body {
 
 }
 
-.pc-ui {
+.pc-connection-ui {
 
 	height: 150px;
 	width: 350px;
@@ -143,7 +143,7 @@ html, body {
 
 }
 
-.connected-ui {
+.pc-connected-ui {
 
 	display: none;
 
@@ -239,12 +239,10 @@ html, body {
 	bottom: 45px;
 
 	text-align:center;
-
-	display: none;
 	
 }
 
-#end-call {
+#end-call-button {
 
 	background-color: #FF9999;
 	position: absolute;
@@ -252,8 +250,6 @@ html, body {
 	bottom: 10px;
 
 	text-align:center;
-
-	display: none;
 	
 }
 
