--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,27 @@ html, body {
 	float: left;
 }
 
+#blur {
+
+	position: absolute;
+	left: 0px;
+	top:0px;
+	bottom: 0px;
+	right: 0px;
+
+    display:block;
+    -webkit-filter: blur(20px);
+    -moz-filter: blur(15px);
+    -o-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
+    opacity: 0.95;
+
+	background-color: #333333;
+	float: left;
+
+}
+
 #video-container #camera-view {
 	width: 100%;
 	height: 100%;
@@ -32,7 +53,7 @@ html, body {
 	width:320px ;
 	height:480px;
 	background-color: #CCCCCC;
-	opacity: 0.6;
+	opacity: 0;
 
 	border-radius: 10px;
 	padding-left: 10px;
@@ -144,6 +165,29 @@ html, body {
 }
 
 .pc-connected-ui {
+
+	display: none;
+
+}
+
+.disconnected-ui {
+
+	height: 70px;
+	width: 300px;
+	padding: 15px;
+
+	border-radius: 20px;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 70px;
+
+	position: absolute;
+	background-color: #CCAAAA;
+	opacity: 0;
+	left: 50%;
+	margin-left: -165px;
+	top: 50%;
+	margin-top: -50px;
 
 	display: none;
 
